muster setting update

--- a/html files/MusterSetting/Setting/index.html
+++ b/html files/MusterSetting/Setting/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
-      href="/Setting/component/TrustStore/TrustStore.css"
+      href="./component/TrustStore/TrustStore.css"
     />
     <link
       rel="stylesheet"
-      href="component/ManageCertificate/ManageCertificate.css"
+      href="./component/ManageCertificate/ManageCertificate.css"
     />
     <link 
     rel="stylesheet"
-    href="/component/TrustStore/TrustStore.css"
+    href="./component/TrustStore/TrustStore.css"
     />
   </head>
   <body>
@@ -26,7 +26,7 @@
             <img
               width="80px"
               height="15.1px"
-              src="assets/musterlogwithtext.svg"
+              src="./assets/musterlogwithtext.svg"
               alt="logo"
             />
           </div>
@@ -40,7 +40,7 @@
                 <div style="display: flex; gap: 8px; align-items: center">
                   <img
                     style="padding: 2px"
-                    src="assets/settingIcon.svg"
+                    src="./assets/settingIcon.svg"
                     alt="settingIcon"
                   />
                   Settings
@@ -50,7 +50,7 @@
               <div class="dropdown-container" id="dropdown1">
                 <a
                   href="#"
-                  onclick="loadContent('/component/TrustStore/TrustStore')"
+                  onclick="loadContent('./component/TrustStore/TrustStore')"
                   >Child 1.1</a
                 >
                 <a href="#"
@@ -122,7 +122,7 @@
       >
         <div style="display: flex; flex-direction: column; gap: 60px">
           <div class="trustStoreBackIcon">
-            <img src="/assets/backArrow.svg" alt="setting" />
+            <img src="./assets/backArrow.svg" alt="setting" />
           </div>
           <div class="trust-store-heading" style="position: relative">
             Trust store
@@ -130,7 +130,7 @@
           <div style="display: flex; flex-direction: column; gap: 24px">
             <a
               class="trust-store-box"
-              href="/component/ManageCertificate/ManageCertificate.html"
+              href="./component/ManageCertificate/ManageCertificate.html"
               style="text-decoration: none;"
             >
               <div style="display: flex; flex-direction: column">
@@ -140,7 +140,7 @@
                 </div>
               </div>
               <div style="display: flex; align-items: center">
-                <img src="/assets/dropdown.svg" alt="dropdown" />
+                <img src="./assets/dropdown.svg" alt="dropdown" />
               </div>
             </a>
             <div class="trust-store-box">
@@ -151,7 +151,7 @@
                 </div>
               </div>
               <div style="display: flex; align-items: center">
-                <img src="/assets/dropdown.svg" alt="dropdown" />
+                <img src="./assets/dropdown.svg" alt="dropdown" />
               </div>
             </div>
             <div class="trust-store-box">
@@ -162,7 +162,7 @@
                 </div>
               </div>
               <div style="display: flex; align-items: center">
-                <img src="/assets/dropdown.svg" alt="dropdown" />
+                <img src="./assets/dropdown.svg" alt="dropdown" />
               </div>
             </div>
           </div>
@@ -170,6 +170,6 @@
       </div>
     </div>
     <script src="index.js"></script>
-    <script src="/component/ManageCertificate/ManageCertificate.js"></script>
+    <script src="./component/ManageCertificate/ManageCertificate.js"></script>
   </body>
 </html>
